macros/tests/trybuild/trait.stderr
error: cannot use `serde_args::generate` macro on trait
 --> tests/trybuild/trait.rs:4:1
  |
4 | trait Foo {}
  | ^^^^^^^^^^^^
