macros/tests/trybuild/trait.rs
use serde_args_macros::generate;

#[generate]
trait Foo {}

fn main() {}
